--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
               </li>
             </ul>
           </div>
+          <div class="hero_image">
+            <img src="./images/fon-1.png" alt="" class="img" />
+          </div>
           <div>
             <div class="hero_title">
               <span class="title_left">Fin</span>
@@ -43,13 +46,47 @@
             </h3>
             <button class="hero_btn" type="button">Заказать демо</button>
           </div>
+          <div class="advantages">
+            <ul class="advantages_list">
+              <li class="advantages_item">
+                <div class="icon_block">
+                  <svg class="icon">
+                    <use href="./images/icons.svg#icon-Graph"></use>
+                  </svg>
+                </div>
+                <p class="advantages_text">Удобный пользовательский интерфейс</p>
+              </li>
+              <li class="advantages_item">
+                <div class="icon_block">
+                  <svg class="icon">
+                    <use href="./images/icons.svg#icon-Activity"></use>
+                  </svg>
+                </div>
+                <p class="advantages_text">Панель администратора для ведения учета</p>
+              </li>
+              <li class="advantages_item">
+                <div class="icon_block">
+                  <svg class="icon">
+                    <use href="./images/icons.svg#icon-Filter"></use>
+                  </svg>
+                </div>
+                <p class="advantages_text">Простая и быстрая интеграция</p>
+              </li>
+              <li class="advantages_item">
+                <div class="icon_block">
+                  <svg class="icon">
+                    <use href="./images/icons.svg#icon-Setting"></use>
+                  </svg>
+                </div>
+                <p class="advantages_text">Гибкая  масштабируемая система</p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
     <!-- <div class="clearfix pbs">
-      <svg class="icon">
-        <use href="./images/icons.svg#icon-3"></use>
-      </svg>
+      
     </div> -->
   </body>
 </html>
