--- a/index.html
+++ b/index.html
@@ -84,9 +84,85 @@
           </div>
         </div>
       </section>
+
+      <!--  PRODUCTS-->
+      <section class="products">
+        <div class="container">
+          <h3 class="products_title">
+            Наши <span class="title_important">ключевые продукты</span><br />
+            для инвестиций
+          </h3>
+          <ul class="products_list">
+            <li class="products_item">
+              <div class="products_text">
+                <p class="primary_text">Платформа для автоследования</p>
+                <p class="secondary_text">Копирование стратегий в автономном режиме</p>
+              </div>
+              <img src="./images/product-1-1.png" alt="" class="product_img" />
+            </li>
+            <li class="products_item">
+              <div class="products_text">
+                <p class="primary_text">Платформа для робо-эдвайзинга</p>
+                <p class="secondary_text">
+                  Персонализированный подбор стратегий исходя из заданных параметров
+                </p>
+              </div>
+              <img src="./images/product-2-2.png" alt="" class="product_img" />
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
-    <!-- <div class="clearfix pbs">
-      
-    </div> -->
+
+    <!--  VALUE-->
+      <section class="value">
+        <div class="container">
+          <div class="value_left">
+           <h3 class="value_title">
+            <span class="title_important">Представляем ценность</span><br />
+            для броĸера и банĸа
+          </h3>
+          <p class="value_text">Мы помогаем броĸерам и банĸам запустить собственное мобильное приложение для инвестиций в ĸоротĸие сроĸи и с эĸономией бюджета</p>
+          <button class="value_btn" type="button">Заказать демо</button>
+        </div>
+        <div class="value_right">
+          <ul class="value_list">
+            <li class="value_item">
+                 <div class="value_icon_block">
+                  <svg class="value_icon">
+                    <use href="./images/icons.svg#icon-1"></use>
+                  </svg>
+                </div>
+                <p class="value_item_text">Эĸономим время и деньги на запусĸ digital сервисов</p>
+            </li>
+                 <li class="value_item">
+                 <div class="value_icon_block">
+                  <svg class="value_icon">
+                    <use href="./images/icons.svg#icon-2"></use>
+                  </svg>
+                </div>
+                <p class="value_item_text">Создаем канал привлечения новых клиентов</p>
+            </li>
+                 <li class="value_item">
+                 <div class="value_icon_block">
+                  <svg class="value_icon">
+                    <use href="./images/icons.svg#icon-3"></use>
+                  </svg>
+                </div>
+                <p class="value_item_text">Помогаем увеличить выручку путем запуска нового продукта</p>
+            </li>
+                 <li class="value_item">
+                 <div class="value_icon_block">
+                  <svg class="value_icon">
+                    <use href="./images/icons.svg#icon-4"></use>
+                  </svg>
+                </div>
+                <p class="value_item_text">Повышаем лояльность действующих клиентов</p>
+            </li>
+          </ul>
+        </div>
+        </div>
+      </section>
+    </div> 
   </body>
 </html>
